[x] [T_0003] - Wallet Creation
